Fix warnings in layout file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/WebPage" lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html itemscope itemtype="http://schema.org/WebPage" lang="{{ page.lang | default: site.lang | default: 'en' }}">
   <head>
     <!-- Non social metatags -->
     <meta charset="utf-8">
@@ -8,15 +8,15 @@
 
     {% seo %}
     {% if site.plugins contains "jekyll-feed" %}
-      <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+      <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ '/feed.xml' | relative_url }}">
     {% endif %}
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png?v=almN0Wkzb6" | relative_url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png?v=almN0Wkzb6" | relative_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png?v=almN0Wkzb6" | relative_url }}">
-    <link rel="manifest" href="{{ "/site.webmanifest?v=almN0Wkzb6" | relative_url }}">
-    <link rel="mask-icon" href="{{ "/safari-pinned-tab.svg?v=almN0Wkzb6" | relative_url }}" color="#6298ff">
-    <link rel="shortcut icon" href="{{ "/favicon.ico?v=almN0Wkzb6" | relative_url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png?v=almN0Wkzb6' | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png?v=almN0Wkzb6' | relative_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png?v=almN0Wkzb6' | relative_url }}">
+    <link rel="manifest" href="{{ '/site.webmanifest?v=almN0Wkzb6' | relative_url }}">
+    <link rel="mask-icon" href="{{ '/safari-pinned-tab.svg?v=almN0Wkzb6' | relative_url }}" color="#6298ff">
+    <link rel="shortcut icon" href="{{ '/favicon.ico?v=almN0Wkzb6' | relative_url }}">
     <meta name="apple-mobile-web-app-title" content="Pencil2D">
     <meta name="application-name" content="Pencil2D">
     <meta name="msapplication-TileColor" content="#2b5797">
@@ -58,7 +58,7 @@
         {% endif %}
         {% if page.layout == 'hacktoberfest' %}
           {% unless page-tagline %}
-            <img src="{{ "/images/hacktoberfest-icon.svg" | relative_url }}" style="height: 4rem;vertical-align: middle;" alt="" aria-hidden="true" />
+            <img src="{{ '/images/hacktoberfest-icon.svg' | relative_url }}" style="height: 4rem;vertical-align: middle;" alt="" aria-hidden="true" />
           {% endunless %}
         {% endif %}
         {{ page.title | default: site.title | escape }}
@@ -68,14 +68,14 @@
             <img src="https://developers.google.com/open-source/gsoc/resources/downloads/GSoC-icon.svg" style="height: 2rem;vertical-align: middle;" alt="" aria-hidden="true" />
         {% endif %}
         {% if page.layout == 'hacktoberfest' and page-tagline %}
-            <img src="{{ "/images/hacktoberfest-icon.png" | relative_url }}" style="height: 2rem;vertical-align: middle;" alt="" aria-hidden="true" />
+            <img src="{{ '/images/hacktoberfest-icon.png' | relative_url }}" style="height: 2rem;vertical-align: middle;" alt="" aria-hidden="true" />
         {% endif %}
         {{ page-tagline }}
       </h2>
       {% if page.layout == 'home' %}
-          <a href="{{ "/download" | relative_url }}" class="btn">Download now!</a>
-          <a href="{{ "/doc/tutorials.html" | relative_url }}" class="btn">Tutorials</a>
-          <a href="{{ "/2021/02/pencil2d-0.6.6-release.html" | relative_url }}" class="btn">What's New?</a>
+          <a href="{{ '/download' | relative_url }}" class="btn">Download now!</a>
+          <a href="{{ '/doc/tutorials.html' | relative_url }}" class="btn">Tutorials</a>
+          <a href="{{ '/2021/02/pencil2d-0.6.6-release.html' | relative_url }}" class="btn">What's New?</a>
       {% endif %}
       <!-- Post tagline -->
       {% if page.layout == 'post' %}
@@ -128,7 +128,7 @@
         {% if site.plugins contains "jekyll-feed" %}
           <!-- RSS icon -->
           <span class="my-span-icon">
-            <a href="{{ "/feed.xml" | relative_url }}" aria-label="RSS feed" title="{{ site.github.owner_name }}'s RSS feed">
+            <a href="{{ '/feed.xml' | relative_url }}" aria-label="RSS feed" title="{{ site.github.owner_name }}'s RSS feed">
               <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-3.374 17c-.897 0-1.626-.727-1.626-1.624s.729-1.624 1.626-1.624 1.626.727 1.626 1.624-.729 1.624-1.626 1.624zm3.885 0c-.03-3.022-2.485-5.474-5.511-5.504v-2.406c4.361.03 7.889 3.555 7.92 7.91h-2.409zm4.081 0c-.016-5.297-4.303-9.571-9.592-9.594v-2.406c6.623.023 11.985 5.384 12 12h-2.408z"/></svg>
             </a>
           </span>
